# DMM-enigma2-plugin-babelzapper

./: .gitignore  configure.ac
meta/: Makefile.am
src/: Makefile.am  plugin.py  readme.txt
src/babelzapper/: Makefile.am  audioplay.zbb  audioplex.zbb  audioselectplay.zbb  audioselectplex.zbb  babelzapper.zbb  letters.zbb  letters_1_eiauo.zbb  letters_1_eiauo_capslock.zbb  letters_1_eiauo_shift.zbb  letters_2_nsrtd.zbb  letters_2_nsrtd_capslock.zbb  letters_2_nsrtd_shift.zbb  letters_3_hlcgm.zbb  letters_3_hlcgm_capslock.zbb  letters_3_hlcgm_shift.zbb  letters_4_bwfkz.zbb  letters_4_bwfkz_capslock.zbb  letters_4_bwfkz_shift.zbb  letters_5_pvjyxq.zbb  letters_5_pvjyxq_capslock.zbb  letters_5_pvjyxq_shift.zbb  letters_6_uml.zbb  letters_6_uml_capslock.zbb  letters_6_uml_shift.zbb  letters_7_sonderz.zbb  letters_8_manynum.zbb  letters_8_numbers.zbb  letters_capslock.zbb  letters_shift.zbb  macros.zbb  manynum.zbb  mytube.zbb  mytubelist.zbb  mytubeplay.zbb  mytubeselect.zbb  pip.zbb  plex.zbb  pvr.zbb  quickjump.zbb  (+2 more)
