installdir = $(libdir)/enigma2/python/Plugins/Extensions/BabelZapper/babelzapper
install_DATA = \
	audio.zbb \
	audioplay.zbb \
	audioplex.zbb \
	audioselectplay.zbb \
	audioselectplex.zbb \
	babelzapper.zbb \
	colormenu.zbb \
	colorzapp.zbb \
	epg.zbb \
	letters.zbb \
	letters_1_eiauo.zbb \
	letters_1_eiauo_capslock.zbb \
	letters_1_eiauo_shift.zbb \
	letters_2_nsrtd.zbb \
	letters_2_nsrtd_capslock.zbb \
	letters_2_nsrtd_shift.zbb \
	letters_3_hlcgm.zbb \
	letters_3_hlcgm_capslock.zbb \
	letters_3_hlcgm_shift.zbb \
	letters_4_bwfkz.zbb \
	letters_4_bwfkz_capslock.zbb \
	letters_4_bwfkz_shift.zbb \
	letters_5_pvjyxq.zbb \
	letters_5_pvjyxq_capslock.zbb \
	letters_5_pvjyxq_shift.zbb \
	letters_6_uml.zbb \
	letters_6_uml_capslock.zbb \
	letters_6_uml_shift.zbb \
	letters_7_sonderz.zbb \
	letters_8_manynum.zbb \
	letters_8_numbers.zbb \
	letters_capslock.zbb \
	letters_shift.zbb \
	macros.zbb \
	manynum.zbb \
	menu.zbb \
	mytube.zbb \
	mytubelist.zbb \
	mytubeplay.zbb \
	mytubeselect.zbb \
	numbermenu.zbb \
	pip.zbb \
	plex.zbb \
	pvr.zbb \
	quickjump.zbb \
	recplay.zbb \
	zapp.zbb
